// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Renders with children 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-active"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
      data-component-name="ToolbarContent"
    >
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar Renders with children as react fragments 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer Toolbar-active"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
      data-component-name="ToolbarContent"
    >
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar Renders with default Props 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer"
  >
    <div
      class="Toolbar-toolbar"
      data-component-name="ToolbarContent"
    />
  </div>
</DocumentFragment>
`;

exports[`Toolbar ToolbarSeparator 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
      data-component-name="ToolbarContent"
    >
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <div
          aria-label="Separator"
          class="ToolbarSeparator-separator"
        />
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar ToolbarSpacer 1`] = `
<DocumentFragment>
  <div
    class="Toolbar-outerContainer"
    data-testid="toolbar"
  >
    <div
      class="Toolbar-toolbar"
      data-component-name="ToolbarContent"
    >
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item1
        </span>
      </div>
      <span
        class="spacer"
        style="flex-grow: 1;"
      />
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item2
        </span>
      </div>
      <div
        class="Toolbar-childContainer"
        data-component-name="ToolbarChildContainer"
      >
        <span
          class="Text-text"
        >
          Item3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar overflow menu 1`] = `
<body>
  {
    Symbol(SameObject caches): {
      "childNodes": NodeList [
        <span
          aria-live="polite"
          class="ui5-invisiblemessage-polite"
          role="alert"
          style="position: absolute; clip: rect(1px, 1px, 1px, 1px); user-select: none; left: -1000px; top: -1000px; pointer-events: none;"
        />,
        <span
          aria-live="assertive"
          class="ui5-invisiblemessage-assertive"
          role="alert"
          style="position: absolute; clip: rect(1px, 1px, 1px, 1px); user-select: none; left: -1000px; top: -1000px; pointer-events: none;"
        />,
      ],
    },
  }
  <div>
    <div
      class="Toolbar-outerContainer Toolbar-hasOverflow"
      data-testid="toolbar"
      style="width: 300px;"
    >
      <div
        class="Toolbar-toolbar"
        data-component-name="ToolbarContent"
      >
        <div
          class="Toolbar-childContainer"
          data-component-name="ToolbarChildContainer"
        >
          <span
            class="Text-text"
            data-testid="toolbar-item"
            style="width: 200px;"
          >
            Item1
          </span>
        </div>
        <div
          class="Toolbar-childContainer"
          data-component-name="ToolbarChildContainer"
          style="visibility: hidden; position: absolute; pointer-events: none;"
        >
          <div
            aria-label="Separator"
            class="ToolbarSeparator-separator"
          />
        </div>
        <div
          class="Toolbar-childContainer"
          data-component-name="ToolbarChildContainer"
          style="visibility: hidden; position: absolute; pointer-events: none;"
        >
          <span
            class="Text-text"
            data-testid="toolbar-item"
            style="width: 200px;"
          >
            Item2
          </span>
        </div>
        <div
          class="Toolbar-childContainer"
          data-component-name="ToolbarChildContainer"
          style="visibility: hidden; position: absolute; pointer-events: none;"
        >
          <span
            class="Text-text"
            data-testid="toolbar-item"
            style="width: 200px;"
          >
            Item3
          </span>
        </div>
      </div>
      <div
        class="Toolbar-overflowButtonContainer"
        data-component-name="ToolbarOverflowButtonContainer"
      >
        <ui5-toggle-button
          accessible-name="Show more"
          design="Transparent"
          icon="overflow"
          id="1337"
          tooltip="Show more"
          ui5-toggle-button=""
        />
      </div>
    </div>
  </div>
  <ui5-popover
    class="Toolbar-popover"
    hide-arrow="true"
    horizontal-align="Center"
    opener="1337"
    placement-type="Bottom"
    ui5-popover=""
    vertical-align="Center"
  >
    <div
      class="Toolbar-popoverContent"
    >
      <div
        aria-label="Separator"
        class="ToolbarSeparator-separator"
        style="height: 0.0625rem; margin: 0.375rem 0.1875rem; width: 100%;"
      />
      <span
        class="Text-text"
        data-testid="toolbar-item"
        style="width: 200px;"
      >
        Item2
      </span>
      <span
        class="Text-text"
        data-testid="toolbar-item"
        style="width: 200px;"
      >
        Item3
      </span>
    </div>
  </ui5-popover>
</body>
`;
